[package]
name = "cli_snake"
version = "0.1.0"
authors = ["jamie <jamieapps101@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tui = "0.16"
termion = "1.5"
crossbeam = "0.8.1"