[package]
name = "snek"
version = "1.0.0"
authors = ["jamie <jamieapps101@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tui = "0.16"
termion = "1.5"
crossbeam = "0.8.1"
rand = "0.8.4"
clap = "2.33.3"